@@ -13,13 +13,6 @@
   font-size: 12px;
 }
 
-.mail {
-  font-family: monospace;
-  font-size: 13px;
-  background-color: #FFFFFF;
-  text-align: left;
-}
-
 .titlew {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
@@ -578,17 +571,11 @@ img.sort {
   margin-left: 2em;
 }
 
+/*
+ * mail data (verbose header, body and attachments)
+ */
 .mailData {
-  border: 0px;
-  text-align: center;
-  padding: 0px;
-  width: 100%;
   background-color: #FFFFFF;
-}
-
-.mailData table {
-  border: 0px;
-  padding: 2px;
 }
 
 .mail {
@@ -599,6 +586,32 @@ img.sort {
 .mail pre {
   margin: 0;
   padding: 0;
+}
+
+hr.mailAttachSep {
+  margin: 0;
+  padding: 0;
+}
+
+.mailTextAttach {
+  margin: 0;
+  padding: .5em;
+}
+
+.mailImgAttach {
+  text-align: center;
+}
+
+.mailImgAttach img {
+  margin: 0;
+  padding: .5em;
+  background: url(./img/img-loader.gif) no-repeat 50% 50%;
+}
+
+.mail,
+.mailTextAttach {
+  font-family: monospace;
+  font-size: 13px;
 }
 
 .mailNav {
